infrastructure/istio/virtualservices/eegress-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: swarm-egress-virtualservice
  namespace: laboratory-swarm
spec:
  hosts:
    - "external-service.com"
  gateways:
    - istio-system/swarm-egress-gateway
  tls:
    - match:
        - port: 443
          sni_hosts:
            - "external-service.com"
      route:
        - destination:
            host: external-service.com
            port:
              number: 443
